apps/qbittorrent/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.ramoneees.com`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: wildcard-ramoneees-com-tls
